fixed z-index

--- a/.uiwb/css/tailwind.css
+++ b/.uiwb/css/tailwind.css
@@ -4,6 +4,7 @@
 
 body {
     height: 100%;
+    z-index: 1;
 }
 
 @tailwind utilities;
